# codegen_XML_C

./: .dir-locals.el  CMakeLists.txt  README.md  custom.c  custom.xml  customModule.c  example.xml  exampleWithCustom.xml  main.cpp  out.c
nwogen/: CMakeLists.txt  backend.hpp  backend_c.cpp  backend_c.hpp  block.cpp  block.hpp  codegen.cpp  codegen.hpp  diagram.cpp  diagram.hpp
